Feat: mission and skills sections on homepage

--- a/index.html
+++ b/index.html
@@ -56,5 +56,109 @@ title: Home
 </section>
 
 <section class="Section">
-  <h2 class="centered">Notre expertise</h2>
+  <div class="container">
+    <h2 class="centered">Notre expertise</h2>
+    <div class="Row">
+      <div class="Col Col--halfLarge">
+        <div class="CardSkill">
+          <h3>Gestion des instances représentatives du personnel</h3>
+          <ul>
+            <li>
+              <i class="fas fa-check-circle CardSkill-icon"></i>
+              Epargne salariale
+            </li>
+            <li>
+              <i class="fas fa-check-circle CardSkill-icon"></i>
+              Négociation collective
+            </li>
+            <li>
+              <i class="fas fa-check-circle CardSkill-icon"></i>
+              Mise en place des institutions représentatives du personnel
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="Col Col--halfLarge">
+        <div class="CardSkill">
+          <h3>Conseil et contentieux</h3>
+          <ul>
+            <li>
+              <i class="fas fa-check-circle CardSkill-icon"></i>
+              Formalisation et exécution des contrats de travail
+            </li>
+            <li>
+              <i class="fas fa-check-circle CardSkill-icon"></i>
+              Rupture du contrat de travail
+            </li>
+            <li>
+              <i class="fas fa-check-circle CardSkill-icon"></i>
+              Contentieux pré-prudhomal
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="Col Col--halfLarge">
+        <div class="CardSkill">
+          <h3>Urssaf</h3>
+          <ul>
+            <li>
+              <i class="fas fa-check-circle CardSkill-icon"></i>
+              Assistance lors des contrôles
+            </li>
+            <li>
+              <i class="fas fa-check-circle CardSkill-icon"></i>
+              Contestation des redressements
+            </li>
+            <li>
+              <i class="fas fa-check-circle CardSkill-icon"></i>
+              Maitrise de la paie
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="Col Col--halfLarge">
+        <div class="CardSkill">
+          <h3>Formation</h3>
+          <ul>
+            <li>
+              <i class="fas fa-check-circle CardSkill-icon"></i>
+              Urssaf
+            </li>
+            <li>
+              <i class="fas fa-check-circle CardSkill-icon"></i>
+              Relations individuelles
+            </li>
+            <li>
+              <i class="fas fa-check-circle CardSkill-icon"></i>
+              Relations collectives
+            </li>
+            <li>
+              <i class="fas fa-check-circle CardSkill-icon"></i>
+              Actualité sociales et paie
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="Col Col--halfLarge">
+        <div class="CardSkill">
+          <h3>Diagnostic social</h3>
+          <ul>
+            <li>
+              <i class="fas fa-check-circle CardSkill-icon"></i>
+              Restructuration
+            </li>
+            <li>
+              <i class="fas fa-check-circle CardSkill-icon"></i>
+              Audit
+            </li>
+            <li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
