--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ title: Home
 
 <section class="Section">
   <div class="container">
-    <h2 class="centered">Notre expertise</h2>
+    <h2 class="centered Section-title">Notre expertise</h2>
     <div class="Row">
       <div class="Col Col--halfLarge">
         <div class="CardSkill">
@@ -161,4 +161,30 @@ title: Home
       </div>
     </div>
   </div>
+</section>
+
+<section class="Section--noPaddingBottom Section--gradient">
+  <div class="container">
+    <div class="Row">
+      <div class="Col Col--halfLarge">
+        <h2 class="yellow-maj">Nous contacter</h2>
+        <p>ou écrivez nous sur contact@hogo-avocats.com →</p>
+      </div>
+      <div class="Col Col--quarter">
+        <p>Sofiane Coly</p>
+        <p>06 72 42 24 86</p>
+      </div>
+      <div class="Col Col--quarter">
+        <p>Loïc Lewandoski</p>
+        <p>06 72 42 24 86</p>
+      </div>
+    </div>
+    <p class="centered">Retrouvez-nous dans nos locaux situés au 103 avenue Maréchal de Saxe, 69003 Lyon</p>
+  </div>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2783.595548305195!2d4.843876315777542!3d45.759253721727475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4ea4d30c8fcc9%3A0x3f55b46d169027db!2sSofiane+Coly!5e0!3m2!1sfr!2sfr!4v1559054183011!5m2!1sfr!2sfr" width=100% height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+</section>
+
+<section class="Section Section--gradient">
+
 </section>
