Feat: added contact form

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title: Home
           des entreprises & associations en droit du travail et droit
           de la sécurité sociale.
         </p>
-        <a href="" class="Button Button--blue">En savoir plus</a>
+        <a href="#method" class="Button Button--blue">En savoir plus</a>
       </div>
       <div class="Col Col--twoThird Col--centered">
         <img src="/assets/images/hogo-avocats-droit-social.png" alt="" class="Home-image--large">
@@ -27,7 +27,7 @@ title: Home
   </div>
 </section>
 
-<section class="Section Section--gradient">
+<section class="Section Section--gradient" id="method">
   <div class="container">
     <div class="Row Row--reverse Section-bloc">
       <div class="Col--half">
@@ -39,7 +39,7 @@ title: Home
           Vous conseiller et vous défendre pour tous vos besoins relevant
           de notre expertise.
         </p>
-        <a href="" class="Button Button--grey">Nous contacter</a>
+        <a href="#contact" class="Button Button--grey">Nous contacter</a>
       </div>
     </div>
     <div class="Row">
@@ -63,6 +63,7 @@ title: Home
     <div class="Cards">
 
       <div class="Card Card--padding">
+        <img src="/assets/images/gestion-des-irp.svg" alt="" class="Home-icon">
         <h3>Gestion des instances représentatives du personnel</h3>
         <ul>
           <li>
@@ -81,6 +82,7 @@ title: Home
       </div>
 
       <div class="Card Card--padding">
+        <img src="/assets/images/conseil-contentieux.svg" alt="" class="Home-icon">
         <h3>Conseil et contentieux</h3>
         <ul>
           <li>
@@ -99,6 +101,7 @@ title: Home
       </div>
 
       <div class="Card Card--padding">
+        <img src="/assets/images/urssaf.svg" alt="" class="Home-icon">
         <h3>Urssaf</h3>
         <ul>
           <li>
@@ -117,6 +120,7 @@ title: Home
       </div>
 
       <div class="Card Card--padding">
+        <img src="/assets/images/formation.svg" alt="" class="Home-icon">
         <h3>Formation</h3>
         <ul>
           <li>
@@ -139,6 +143,7 @@ title: Home
       </div>
 
       <div class="Card Card--padding">
+        <img src="/assets/images/diagnostic-social.svg" alt="" class="Home-icon">
         <h3>Diagnostic social</h3>
         <ul>
           <li>
@@ -156,28 +161,62 @@ title: Home
   </div>
 </section>
 
-<section class="Section--noPaddingBottom Section--gradient">
+<section class="Section--noPaddingBottom Section--gradient" id="contact">
   <div class="container">
     <div class="Row">
       <div class="Col Col--halfLarge">
         <h2 class="yellow-maj">Nous contacter</h2>
-        <p>ou écrivez nous sur contact@hogo-avocats.com →</p>
+        <p>ou écrivez nous sur <a href="mailto:contact@hogo-avocats.com">contact@hogo-avocats.com →</a></p>
       </div>
       <div class="Col Col--quarter">
-        <p>Sofiane Coly</p>
-        <p>06 72 42 24 86</p>
+        <img src="/assets/images/sofiane-coly-hogo-avocats.jpg" alt="Sofiane Coly, Hogo Avocats" class="Home-image--round">
+        <p class="blue-maj centered">Sofiane Coly</p>
+        <p class="centered">06 72 42 24 86</p>
       </div>
       <div class="Col Col--quarter">
-        <p>Loïc Lewandoski</p>
-        <p>06 72 42 24 86</p>
+        <img src="/assets/images/loic-lewandowski-hogo-avocats.png" alt="Loïc Lewandowski, Hogo Avocats" class="Home-image--round">
+        <p class="blue-maj centered">Loïc Lewandoski</p>
+        <p class="centered">06 72 42 24 86</p>
       </div>
     </div>
-    <p class="centered">Retrouvez-nous dans nos locaux situés au 103 avenue Maréchal de Saxe, 69003 Lyon</p>
+    <p class="centered Home-address">Retrouvez-nous dans nos locaux situés au 103 avenue Maréchal de Saxe, 69003 Lyon</p>
   </div>
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2783.595548305195!2d4.843876315777542!3d45.759253721727475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4ea4d30c8fcc9%3A0x3f55b46d169027db!2sSofiane+Coly!5e0!3m2!1sfr!2sfr!4v1559054183011!5m2!1sfr!2sfr" width=100% height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 </section>
 
 <section class="Section Section--gradient">
+  <div class="small-container">
+    <h2 class="centered Section-title">Travaillons ensemble</h2>
+    <form action="https://getform.io/f/194bfbe6-8417-4218-be70-8109e0613461" method="POST">
+      <div class="Form-inlineFields">
+        <div class="Form-field Form-field--inline">
+          <label for="firstname" class="Form-label">Prénom</label>
+          <input type="text" name="firstname" class="Form-input">
+        </div>
+        <div class="Form-field Form-field--inline">
+          <label for="lastname" class="Form-label">Nom</label>
+          <input type="text" name="lastname" class="Form-input">
+        </div>
+      </div>
+      <div class="Form-field">
+        <label for="company" class="Form-label">Société</label>
+        <input type="text" name="company" class="Form-input">
+      </div>
+      <div class="Form-field">
+        <label for="phone" class="Form-label">Numéro de téléphone</label>
+        <input type="tel" name="phone" class="Form-input">
+      </div>
+      <div class="Form-field">
+        <label for="email" class="Form-label">E-mail</label>
+        <input type="email" name="email" class="Form-input">
+      </div>
+      <div class="Form-field">
+        <label for="message" class="Form-label">Contexte de la demande<br>(strictement confidentiel)</label>
+        <textarea cols="30" rows="10" name="message" class="Form-input"></textarea>
+      </div>
 
+      <button type="submit" class="Button Button--yellow Form-submit">Envoyer</button>
+    </form>
+  </div>
 </section>
