feat: Submit contact form via ajax

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ title: Home
 <section class="Section Section--gradient">
   <div class="small-container">
     <h2 class="centered Section-title">Travaillons ensemble</h2>
-    <form action="https://getform.io/f/194bfbe6-8417-4218-be70-8109e0613461" method="POST">
+    <form id="ContactForm" action="https://getform.io/f/194bfbe6-8417-4218-be70-8109e0613461" method="POST">
       <div class="Form-inlineFields">
         <div class="Form-field Form-field--inline">
           <label for="firstname" class="Form-label">Prénom</label>
@@ -220,3 +220,5 @@ title: Home
     </form>
   </div>
 </section>
+
+<script src="/assets/js/ContactFormAjaxSubmit.js"></script>
