Feat: added meta tags and favicon

--- a/blog_index.html
+++ b/blog_index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Blog
+meta-desc: Actualités juridiques et droit du travail. Découvrez le blog de HOGO Avocats, société d’avocats spécialisée en droit du travail et droit de la sécurité sociale.
 permalink: /blog/
 ---
 
