Feat: added infographics section

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ title: Le conseil en droit social sur-mesure
     <h2 class="centered Section-title">Notre expertise</h2>
     <div class="Cards">
 
-      <div class="Card Card--padding">
+      <div class="Card Card--padding Card--yellow">
         <img src="/assets/images/gestion-des-irp.svg" alt="" class="Home-icon">
         <h3>Gestion des instances représentatives du personnel</h3>
         <ul>
@@ -82,7 +82,7 @@ title: Le conseil en droit social sur-mesure
         </ul>
       </div>
 
-      <div class="Card Card--padding">
+      <div class="Card Card--padding Card--yellow">
         <img src="/assets/images/conseil-contentieux.svg" alt="" class="Home-icon">
         <h3>Conseil et contentieux</h3>
         <ul>
@@ -101,7 +101,7 @@ title: Le conseil en droit social sur-mesure
         </ul>
       </div>
 
-      <div class="Card Card--padding">
+      <div class="Card Card--padding Card--yellow">
         <img src="/assets/images/urssaf.svg" alt="" class="Home-icon">
         <h3>Urssaf</h3>
         <ul>
@@ -120,7 +120,7 @@ title: Le conseil en droit social sur-mesure
         </ul>
       </div>
 
-      <div class="Card Card--padding">
+      <div class="Card Card--padding Card--yellow">
         <img src="/assets/images/formation.svg" alt="" class="Home-icon">
         <h3>Formation</h3>
         <ul>
@@ -143,7 +143,7 @@ title: Le conseil en droit social sur-mesure
         </ul>
       </div>
 
-      <div class="Card Card--padding">
+      <div class="Card Card--padding Card--yellow">
         <img src="/assets/images/diagnostic-social.svg" alt="" class="Home-icon">
         <h3>Diagnostic social</h3>
         <ul>
