--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ title: Le conseil en droit social sur-mesure
     <h2 class="centered Section-title">Notre expertise</h2>
     <div class="Cards">
 
-      <div class="Card Card--padding">
+      <div class="Card Card--padding Card--yellow">
         <img src="/assets/images/gestion-des-irp.svg" alt="" class="Home-icon">
         <h3>Gestion des instances représentatives du personnel</h3>
         <ul>
@@ -81,7 +81,7 @@ title: Le conseil en droit social sur-mesure
         </ul>
       </div>
 
-      <div class="Card Card--padding">
+      <div class="Card Card--padding Card--yellow">
         <img src="/assets/images/conseil-contentieux.svg" alt="" class="Home-icon">
         <h3>Conseil et contentieux</h3>
         <ul>
@@ -100,7 +100,7 @@ title: Le conseil en droit social sur-mesure
         </ul>
       </div>
 
-      <div class="Card Card--padding">
+      <div class="Card Card--padding Card--yellow">
         <img src="/assets/images/urssaf.svg" alt="" class="Home-icon">
         <h3>Urssaf</h3>
         <ul>
@@ -119,7 +119,7 @@ title: Le conseil en droit social sur-mesure
         </ul>
       </div>
 
-      <div class="Card Card--padding">
+      <div class="Card Card--padding Card--yellow">
         <img src="/assets/images/formation.svg" alt="" class="Home-icon">
         <h3>Formation</h3>
         <ul>
@@ -142,7 +142,7 @@ title: Le conseil en droit social sur-mesure
         </ul>
       </div>
 
-      <div class="Card Card--padding">
+      <div class="Card Card--padding Card--yellow">
         <img src="/assets/images/diagnostic-social.svg" alt="" class="Home-icon">
         <h3>Diagnostic social</h3>
         <ul>
