Design: removed some yellow in favor of blue

--- a/blog_index.html
+++ b/blog_index.html
@@ -13,7 +13,7 @@ permalink: /blog/
     <h2 class="centered normal Section-title">Actualités juridiques et droit du travail</h2>
     <div class="Cards">
       {% for post in site.posts %}
-        <div class="Card Card--yellow">
+        <div class="Card">
           <div class="Card-image" style="background-image: url(/assets/images/{{ post.image }})";></div>
           <div class="Card-content">
             <h3>{{ post.title }}</h3>
