--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ title: Le conseil en droit social sur-mesure
         <img src="/assets/images/hogo-avocats-droit-social-notre-methode.png" alt="" class="Home-image--medium">
       </div>
       <div class="Col--half">
-        <h2 class="yellow-maj">Notre mission</h2>
+        <h2 class="blue-maj">Notre mission</h2>
         <p class="Home-subtitle Home-subtitle--noMarginTop">
           Vous conseiller et vous défendre pour tous vos besoins relevant
           de notre expertise.
@@ -44,7 +44,7 @@ title: Le conseil en droit social sur-mesure
     </div>
     <div class="Row">
       <div class="Col--half">
-        <h2 class="yellow-maj">Notre méthode</h2>
+        <h2 class="blue-maj">Notre méthode</h2>
         <p class="Home-subtitle Home-subtitle--noMarginTop">
           Rendre accessible des sujets techniques, pour vous guider
           dans vos prises de décisions.
@@ -62,7 +62,7 @@ title: Le conseil en droit social sur-mesure
     <h2 class="centered Section-title">Notre expertise</h2>
     <div class="Cards">
 
-      <div class="Card Card--padding Card--yellow">
+      <div class="Card Card--padding">
         <img src="/assets/images/gestion-des-irp.svg" alt="" class="Home-icon">
         <h3>Gestion des instances représentatives du personnel</h3>
         <ul>
@@ -81,7 +81,7 @@ title: Le conseil en droit social sur-mesure
         </ul>
       </div>
 
-      <div class="Card Card--padding Card--yellow">
+      <div class="Card Card--padding">
         <img src="/assets/images/conseil-contentieux.svg" alt="" class="Home-icon">
         <h3>Conseil et contentieux</h3>
         <ul>
@@ -100,7 +100,7 @@ title: Le conseil en droit social sur-mesure
         </ul>
       </div>
 
-      <div class="Card Card--padding Card--yellow">
+      <div class="Card Card--padding">
         <img src="/assets/images/urssaf.svg" alt="" class="Home-icon">
         <h3>Urssaf</h3>
         <ul>
@@ -119,7 +119,7 @@ title: Le conseil en droit social sur-mesure
         </ul>
       </div>
 
-      <div class="Card Card--padding Card--yellow">
+      <div class="Card Card--padding">
         <img src="/assets/images/formation.svg" alt="" class="Home-icon">
         <h3>Formation</h3>
         <ul>
@@ -137,12 +137,12 @@ title: Le conseil en droit social sur-mesure
           </li>
           <li>
             <i class="fas fa-check-circle Card-icon"></i>
-            Actualité sociales et paie
+            Actualités sociales et paie
           </li>
         </ul>
       </div>
 
-      <div class="Card Card--padding Card--yellow">
+      <div class="Card Card--padding">
         <img src="/assets/images/diagnostic-social.svg" alt="" class="Home-icon">
         <h3>Diagnostic social</h3>
         <ul>
@@ -216,7 +216,7 @@ title: Le conseil en droit social sur-mesure
         <textarea cols="30" rows="10" name="message" class="Form-input"></textarea>
       </div>
 
-      <button type="submit" class="Button Button--yellow Form-submit">Envoyer</button>
+      <button type="submit" class="Button Button--blue Form-submit">Envoyer</button>
     </form>
   </div>
 </section>
