Fix: fixed name of lawyer

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ title: Le conseil en droit social sur-mesure
       </div>
       <div class="Col Col--quarter">
         <img src="/assets/images/loic-lewandowski-hogo-avocats.png" alt="Loïc Lewandowski, Hogo Avocats" class="Home-image--round">
-        <p class="blue-maj centered">Loïc Lewandoski</p>
+        <p class="blue-maj centered">Loïc Lewandowski</p>
         <p class="centered">06 98 97 19 87</p>
       </div>
     </div>
