--- a/blog_index.html
+++ b/blog_index.html
@@ -3,16 +3,18 @@ layout: default
 title: Blog
 meta-desc: Actualités juridiques et droit du travail. Découvrez le blog de HOGO Avocats, société d’avocats spécialisée en droit du travail et droit de la sécurité sociale.
 permalink: /blog/
+pagination:
+  enabled: true
 ---
 
 {% include navbar_blog.html %}
 
 <section class="Section Section--gradient">
-  <section class="container">
+  <div class="container">
     <h1 class="centered blue big">Blog</h1>
     <h2 class="centered normal Section-title">Actualités juridiques et droit du travail</h2>
     <div class="Cards">
-      {% for post in site.posts %}
+      {% for post in paginator.posts %}
         <div class="Card">
           <div class="Card-image" style="background-image: url(/{{ post.image }})";></div>
           <div class="Card-content">
@@ -26,5 +28,7 @@ permalink: /blog/
         </div>
       {% endfor %}
     </div>
-  </section>
+
+    {% include paginator.html %}
+  </div>
 </section>
