Design: fixed a typo

--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@ title: 404
         <p class="Home-subtitle">
           Cette page n’existe plus, ou bien vous avez fait une erreur en tapant l’adresse.
         </p>
-        <a href="/" class="Button Button--blue">Revenir à l’acceuil</a>
+        <a href="/" class="Button Button--blue">Revenir à l’accueil</a>
       </div>
       <div class="Col Col--twoThird Col--centered">
         <img src="/assets/images/hogo-avocats-droit-social-notre-mission.png" alt="" class="Home-image--large">
