Feature: add banner

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 title: Le conseil en droit social sur-mesure
 ---
 
+{% include banner.html %}
 {% include navbar.html %}
 
 <section class="Home-header Section--gradient">
