--- a/legal.html
+++ b/legal.html
@@ -4,6 +4,7 @@ title: Mentions légales
 permalink: /mentions-legales/
 ---
 
+{% include banner.html %}
 {% include navbar.html %}
 
 <section class="Section Section--gradient">
