--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@ layout: default
 title: 404
 ---
 
+{% include banner.html %}
 {% include navbar.html %}
 
 <section class="Home-header Section--gradient">
