--- a/blog_index.html
+++ b/blog_index.html
@@ -7,6 +7,7 @@ pagination:
   enabled: true
 ---
 
+{% include banner.html %}
 {% include navbar_blog.html %}
 
 <section class="Section Section--gradient">
