Feature: add video player in book page

--- a/book.html
+++ b/book.html
@@ -22,7 +22,7 @@ permalink: "/ouvrage"
       </div>
 
       <div class="Col Col--half Book-imageContainer">
-        <img src="/assets/images/couverture-LeDroitEnInfographies 1.png" alt="le droit en infographie" class="Book-image">
+        <video class="Book-media" src="/assets/videos/InfographieClause.mp4" type="video/mp4" muted="muted" controls></video>
         <a
         href="https://boutique.grouperf.com/produit/le-droit-du-travail-en-infographies-pratiques-2021"
         target="_blank"
@@ -37,7 +37,7 @@ permalink: "/ouvrage"
         <img
         src="/assets/images/couverture-LeDroitEnInfographie.png"
         alt="le droit en infographie"
-        class="Book-image">
+        class="Book-media">
       </div>
 
       <div class="Col Col--half">
@@ -65,7 +65,7 @@ permalink: "/ouvrage"
         <img
         src="/assets/images/economic-layoff-infography.png"
         alt="Infographie - Comment licencier un salarié pour motif économique"
-        class="Book-image">
+        class="Book-media">
       </div>
     </div>
 
@@ -74,7 +74,7 @@ permalink: "/ouvrage"
         <img
         src="/assets/images/economic-layoff-infography-2.png"
         alt="Infographie 2 - Le licenciement pour motif économique"
-        class="Book-image">
+        class="Book-media">
       </div>
 
       <div class="Col Col--half">
