Chore: remove collaborator from home

--- a/index.html
+++ b/index.html
@@ -164,24 +164,19 @@ title: Le conseil en droit social sur-mesure
 <section class="Section--noPaddingBottom Section--gradient" id="contact">
   <div class="container">
     <div class="Row">
-      <div class="Col Col--quarter">
+      <div class="Col Col--third">
         <h2 class="yellow-maj">Nous contacter</h2>
         <p>ou écrivez nous sur <a href="mailto:contact@hogo-avocats.com">contact@hogo-avocats.com →</a></p>
       </div>
-      <div class="Col Col--quarter">
+      <div class="Col Col--third">
         <img src="/assets/images/sofiane-coly-hogo-avocats.jpg" alt="Sofiane Coly, Hogo Avocats" class="Home-image--round">
         <p class="blue-maj centered">Sofiane Coly</p>
         <p class="centered">06 72 42 24 86</p>
       </div>
-      <div class="Col Col--quarter">
+      <div class="Col Col--third">
         <img src="/assets/images/loic-lewandowski-hogo-avocats.png" alt="Loïc Lewandowski, Hogo Avocats" class="Home-image--round">
         <p class="blue-maj centered">Loïc Lewandowski</p>
         <p class="centered">06 98 97 19 87</p>
-      </div>
-      <div class="Col Col--quarter">
-        <img src="/assets/images/elodie-dardichon-hogo-avocats.jpg" alt="Elodie Dardichon, Hogo Avocats" class="Home-image--round">
-        <p class="blue-maj centered">Elodie Dardichon</p>
-        <p class="centered">06 84 56 86 88</p>
       </div>
     </div>
     <p class="centered Home-address">Retrouvez-nous dans nos locaux situés au 103 avenue Maréchal de Saxe, 69003 Lyon</p>
