Feat: changed adress on legal and home page

--- a/legal.html
+++ b/legal.html
@@ -14,8 +14,8 @@ permalink: /mentions-legales/
     <p>
       <strong>Propriétaire du Site :</strong><br>
       Société HOGO Avocats<br>
-      103 Avenue Maréchal de Saxe<br>
-      69003 LYON<br>
+      27 rue Jacques-Louis Hénon<br>
+      69004 LYON<br>
       contact@hogo-avocats.com<br>
       Numéro de Toque : 909<br>
     </p>
