--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ title: Le conseil en droit social sur-mesure
         <p class="centered">06 98 97 19 87</p>
       </div>
     </div>
-    <p class="centered Home-address">Retrouvez-nous dans nos locaux situés au 103 avenue Maréchal de Saxe, 69003 Lyon</p>
+    <p class="centered Home-address">Retrouvez-nous dans nos locaux situés au 27 rue Jacques-Louis Hénon, 69004 Lyon</p>
   </div>
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2783.595548305195!2d4.843876315777542!3d45.759253721727475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4ea4d30c8fcc9%3A0x3f55b46d169027db!2sSofiane+Coly!5e0!3m2!1sfr!2sfr!4v1559054183011!5m2!1sfr!2sfr" width=100% height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
